<resources>
    <string name="app_name">Marvel Comics App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_title">New Avengers #1</string>
    <string name="default_author">written by Jonathan Hickman</string>
    <string name="default_desc">The Illuminati, Marvel’s most powerful and secretive team, must reassemble to stand against interdimensional incursions!</string>
    <string name="more">Find out more</string>
    <string name="search">Search for a comic book</string>
    <string name="start_search">Start typing to find a particular comics.</string>
    <string name="search_no_result">Sorry, nothing was found.</string>
    <string name="comics_list_label">Marvel Comics</string>
    <string name="search_fragment_label"> </string>
    <string name="details_fragment_label">Details</string>
    <string name="no_author">Sorry, no description was given :(</string>
    <string name="no_description">Sorry, no description was given :(</string>
</resources>