<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.DetailsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detailsImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/comic_book_cover"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomSheetLayout"
            app:behavior_hideable="false"
            app:behavior_peekHeight="@dimen/bottom_sheet_peek"
            android:background="@drawable/bottom_sheet_shape"
            android:paddingBottom="@dimen/bottom_sheet_padding_vert"
            android:paddingLeft="@dimen/bottom_sheet_padding_hor"
            android:paddingRight="@dimen/bottom_sheet_padding_hor"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:id="@+id/bottomSheetIcon"
                android:layout_width="@dimen/bottom_sheet_icon_width"
                android:layout_height="@dimen/bottom_sheet_icon_height"
                android:src="@drawable/ic_remove_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/bottomSheetTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetIcon"
                android:text="@string/default_title"
                android:textSize="@dimen/title_size"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottomSheetAuthor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetTitle"
                android:text="@string/default_author"
                android:textSize="@dimen/author_size"
                android:layout_marginTop="@dimen/bottom_sheet_author_margin" />

            <ScrollView
                android:id="@+id/bottomSheetScrollView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_sheet_desc_scrollview_height"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetAuthor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/findOutMoreButton"
                android:paddingTop="@dimen/bottom_sheet_desc_margin">

                <TextView
                    android:id="@+id/bottomSheetDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scrollbars="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bottomSheetAuthor"
                    android:textSize="@dimen/desc_size"
                    android:paddingBottom="@dimen/bottom_sheet_desc_margin"
                    android:textColor="@color/black"
                    android:text="@string/default_desc" />

            </ScrollView>

            <Button
                android:id="@+id/findOutMoreButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/more_button_top_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottomSheetScrollView"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:text="@string/more"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>




</androidx.constraintlayout.widget.ConstraintLayout>