<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchList.SearchFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/search_input_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/searchIcon"
            android:textColor="@color/black"
            android:background="@drawable/search_input_shape"
            android:hint="@string/search"
            android:layout_marginEnd="@dimen/search_bar_margin"
            android:layout_marginTop="@dimen/search_bar_margin"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="@dimen/search_bar_icon_dimensions"
            android:layout_height="@dimen/search_bar_icon_dimensions"
            android:src="@drawable/ic_search_24"
            android:layout_marginTop="@dimen/search_bar_margin"
            android:layout_marginStart="@dimen/search_bar_margin"
            app:layout_constraintRight_toLeftOf="@+id/searchInput"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/search_icon_shape"
            app:tint="@color/darker_gray" />



    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/searchRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/search_list_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:listitem="@layout/comics_list_element"
        app:layout_constraintTop_toBottomOf="@id/searchLayout"
        android:layout_marginBottom="@dimen/search_list_margin"
        android:layout_marginStart="@dimen/search_list_margin"
        android:layout_marginEnd="@dimen/search_list_margin"
        android:visibility="gone"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/searchImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toTopOf="@+id/searchInfo"
            app:tint="@color/darker_gray" />

        <TextView
            android:id="@+id/searchInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchImage"
            android:text="@string/start_search"
            android:textSize="@dimen/search_info_text_size"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notFoundLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/notFoundImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintBottom_toTopOf="@+id/notFoundInfo"/>

        <TextView
            android:id="@+id/notFoundInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notFoundImage"
            android:text="@string/search_no_result"
            android:textSize="@dimen/no_result_text_size"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>


    </androidx.constraintlayout.widget.ConstraintLayout>









</androidx.constraintlayout.widget.ConstraintLayout>